--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div class="container">
+        <h1 class="app-title">Погода в мире 🌍</h1>
+        
         <!-- Форма ввода координат -->
         <div class="weather-form">
             <div class="input-group">
@@ -23,10 +25,8 @@
             <button class="btn-submit" id="getWeatherBtn">Показать погоду</button>
         </div>
 
-        <!-- Область для отображения погоды -->
-        <div class="weather-result" id="weatherResult">
-            <div class="temperature" id="temperature"></div>
-        </div>
+        <!-- Область для отображения виджетов -->
+        <div class="widgets-container" id="widgetsContainer"></div>
     </div>
 
     <script src="js/validation.js"></script>
