--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Погода</title>
+    
+    <!-- Leaflet CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -28,9 +32,14 @@
         <!-- Область для отображения виджетов -->
         <div class="widgets-container" id="widgetsContainer"></div>
     </div>
+    <!-- Leaflet JS -->
 
+	
+
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script> 
     <script src="js/validation.js"></script>
     <script src="js/weather.js"></script>
+    <script src="js/map.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/app.js"></script>
 </body>
